--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Kanit', sans-serif;
   font-size: 1rem;
+  height: 100vh;
 }
 
 section {
@@ -10,6 +11,10 @@ section {
   background-origin: border-box;
   background-position: center;
   background-size: cover;
+}
+
+#preloader {
+  position: absolute;
 }
 
 /* Desktop */
@@ -58,7 +63,7 @@ section {
   }
 
   .container {
-    padding
+    width: 100%!important;
   }
 }
 
@@ -66,17 +71,18 @@ section {
   background-color: rgba(0, 0, 0, 0.3);
   margin: 2rem 1rem;
   padding: 2rem 1rem;
+  
+  max-height: 100vh!important;
 }
 
 .container-fluid {
   height: 100%!important;
   max-height: 100vh!important;
-  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .container {
   /*outline: 1px solid red;*/
-  height: 100%;
+  max-height: 100vh!important;
   background-color: rgba(0, 0, 0, 0.3);
   margin-top: 3vh!important;
   margin-bottom: 1vh!important;
@@ -85,7 +91,6 @@ section {
 
 #logo {
   margin: 3rem 0 2rem;
-  height: 50%;
 }
 
 #logo img {
@@ -93,8 +98,7 @@ section {
 }
 
 .location {
-  margin: 4rem 0;
-  height: 50%;
+  margin: 3rem 0;
   color: rgba(255, 255, 255, 0.8);
   font-size: 1.8rem;
   line-height: 1.8rem;
